# pylunch

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  run_flask.ps1  run_flask.sh  self_update.sh  setup.py
hack/nginx/: pylunch.conf
hack/services/: pylunch.service  pylunch.socket
pylunch/: README.md  cli.py  config.py  errors.py  log_config.py  lunch.py  tags_evaluator.py  telegram_bot.py  utils.py  visitor_store.py  web.py
pylunch/bots/: dc_bot.py  telegram_bot.py
pylunch/static/: default.js  style.css
pylunch/templates/: amenu.html  error.html  fmenu.html  index.html  menu.html  restaurant.html  template.html
pylunch/templates/admin/: edit.html  erestaurants.html  index.html  login.html
resources/: restaurants.yml  users.yml
