[tool.poetry]
name = "pylunch"
version = "0.3.0"
description = "Pylunch cli and web tool to get lunch info"
authors = ["Peter Stanko <peter.stanko0@gmail.com>"]
repository='https://github.com/pestanko/pylunch'
homepage='https://github.com/pestanko/pylunch'
documentation='https://github.com/pestanko/pylunch'
license = "Apache-2.0"
readme = 'README.md'
packages = [
    { include = "pylunch" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    'Intended Audience :: Developers',
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.7"

requests = "*"
pyyaml = "*"
html2text = "*"
beautifulsoup4 = "*"
lxml = "*"
fuzzywuzzy = "*"
click = "*"
python-levenshtein = "*"
pyzomato = "*"
ipython = "*"
flask = "*"
flask-jwt-extended = "*"
werkzeug = "*"
aiohttp = "*"
aiodns = "*"
pytesseract = "*"
pillow = "*"
unidecode = "*"
toml = "*"
gunicorn = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"
rope = "*"

[tool.poetry.scripts]
pylunch = 'pylunch:cli.main_cli'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
